# django-h2-push

./: README.md  setup.cfg  setup.py
django_h2_push/: __init__.py  apps.py  middleware.py
django_h2_push/templatetags/: pushed_static.py
static_preload/: __init__.py  apps.py
