[metadata]
name = django-static-preload
version = 0.1a1
description = str:
  A django app that assists with generating HTTP/2 Server Push
  headers for reverse proxies, such as h2o and apache
long_description = file: README.md
author = Anthony King
author_email = anthony.king@fundingoptions.com
license = GPLv3
url = https://github.com/FundingOptions/django-static-preload

[wheel]
universal = 1
